; ModuleID = '/home/carl/AnghaBench/jq/src/extr_bytecode.c_getlevel.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_bytecode.c_getlevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bytecode = type { %struct.bytecode* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.bytecode* (%struct.bytecode*, i32)* @getlevel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.bytecode* @getlevel(%struct.bytecode* %0, i32 %1) #0 {
  %3 = alloca %struct.bytecode*, align 8
  %4 = alloca i32, align 4
  store %struct.bytecode* %0, %struct.bytecode** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %8, %2
  %6 = load i32, i32* %4, align 4
  %7 = icmp sgt i32 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %5
  %9 = load %struct.bytecode*, %struct.bytecode** %3, align 8
  %10 = getelementptr inbounds %struct.bytecode, %struct.bytecode* %9, i32 0, i32 0
  %11 = load %struct.bytecode*, %struct.bytecode** %10, align 8
  store %struct.bytecode* %11, %struct.bytecode** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %4, align 4
  br label %5

14:                                               ; preds = %5
  %15 = load %struct.bytecode*, %struct.bytecode** %3, align 8
  ret %struct.bytecode* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
